# rich-click-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/devel/: GAP_INVENTORY.md  ROADMAP.md
examples/: 01_simple.rs  02_declarative.rs  03_groups_sorting.rs  04_rich_markup.rs  05_markdown.rs  06_arguments.rs  07_custom_errors.rs  08_metavars.rs  08_metavars_default.rs  09_envvar.rs  10_table_styles.rs  11_hello.rs  basic.rs
src/: config.rs  lib.rs  render.rs  rich_main.rs  testing.rs  theme.rs
tests/examples/: run_examples.sh  run_examples_ansi.sh
tests/parity/: requirements.txt  run_parity.sh
tests/parity/phase1/output/: python.txt
tests/parity/phase1/python/: test_help.py
tests/parity/phase1/rust/: Cargo.toml
tests/parity/phase1/rust/src/: main.rs
tests/parity/phase2/python/: test_help.py
tests/parity/phase2/rust/: Cargo.toml
tests/parity/phase2/rust/src/: main.rs
tests/parity/phase3/python/: test_help.py
tests/parity/phase3/rust/: Cargo.toml
tests/parity/phase3/rust/src/: main.rs
