[package]
name = "rich-click-rs"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "Rich help formatting for click-rs"
license = "MIT"
repository = "https://github.com/mrsaraiva/rich-click-rs"
documentation = "https://docs.rs/rich-click-rs"
readme = "README.md"
keywords = ["cli", "command-line", "terminal", "help", "rich"]
categories = ["command-line-interface"]
exclude = [
    ".idea/",
    "*.dat",
    "docs/devel/",
    "tests/parity/",
    "tools/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
click = { package = "click-rs", version = "1.0.0", path = "../click-rs" }
rich-rs = { version = "1.1.0", path = "../rich-rs" }
serde_json = "1.0"

[dev-dependencies]
